--- a/leetcode/p79.md
+++ b/leetcode/p79.md
@@ -8,7 +8,7 @@
 
 ## Solution
 
-> [DFS](), [Backtracking]()
+> [DFS, Backtracking](https://github.com/253eosam/Algorithm/blob/master/algorithm_note/dfs.md)
 
 보드판의 알파벳을 한번씩만 사용하여 인접한 알파벳을 붙어나가면서 `word`를 만들어내는 문제.
 
